# GSeurat

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: bricklayer.md  gs-performance-report.md  melies.md  simulation-wasm.md  vfx-editor.md
schemas/: character_manifest.schema.json  scene.schema.json  vfx.schema.json
scripts/: game_director.py  generate_demo_scene.py  generate_emissive_test.py  generate_island.sh  generate_island_props.py  generate_island_terrain.py  mesh_to_ply.py  migrate_scene_v2.py  obj_to_ply.py  ply_utils.py
shaders/: CMakeLists.txt  composite.frag  gs_merge.comp  gs_post_process.comp  gs_preprocess.comp  gs_render.comp  sprite.frag  sprite.vert  sprite_outline.frag  triangle.vert
src/: app.cpp  demo_main.cpp  gs_demo_main.cpp  main.cpp  staging_main.cpp
tests/: README.md  test_async_loader.cpp  test_bone_animation_player.cpp  test_bone_animation_state_machine.cpp  test_character_data.cpp  test_character_manifest.cpp  test_component_registry.cpp  test_feature_flags.cpp  test_gaussian_cloud.cpp  test_gs_chunk_grid.cpp  test_gs_chunk_streamer.cpp  test_gs_emission.cpp  test_gs_parallax_camera.cpp  test_gs_particle.cpp  test_gs_point_lights.cpp  test_gs_post_process.cpp  test_gs_spline.cpp  test_incremental_sync.cpp  test_island_systems.cpp  test_scene_loading.cpp  test_screenshot.cpp  test_staging_uploader.cpp  test_system_scheduler.cpp  test_tilemap.cpp  test_vfx_lights_rotation.cpp  test_vfx_scene_buffer.cpp
tools/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  setup.sh
(+645 files in other folders)
